Fixing a cell-overflow display issue.

--- a/public/styles/keystone/list.less
+++ b/public/styles/keystone/list.less
@@ -283,7 +283,8 @@ table.items-list {
 		margin: @table-cell-padding;
 	}
 	
-	.col-value {
+	.col-value, td a {
+		max-width: 100%;
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
